add method for split at comma space or tab